<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="user" type="com.huyentran.tweets.models.User"/>
    </data>

    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/btnCancel"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/icon_cancel"
            android:background="@color/colorTransparent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/cancel"/>

        <ImageView
            android:id="@+id/ivProfilePic"
            android:layout_width="@dimen/profile_pic_size"
            android:layout_height="@dimen/profile_pic_size"
            android:padding="@dimen/profile_pic_padding"
            app:imageUrl="@{user.profileImageUrl}"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/profile_pic_description"/>

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@{user.name}"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/ivProfilePic"
            android:layout_toStartOf="@+id/ivProfilePic"
            android:layout_marginRight="@dimen/margin"/>

        <TextView
            android:id="@+id/tvScreenName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textColor="@color/colorTextSecondary"
            android:text="@{user.screenName}"
            android:layout_below="@+id/tvUserName"
            android:layout_toLeftOf="@+id/ivProfilePic"
            android:layout_toStartOf="@+id/ivProfilePic"
            android:layout_marginRight="@dimen/margin"/>

        <EditText
            android:id="@+id/etBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivProfilePic"
            android:hint="@string/tweet_hint"
            tools:text="tweet tweet tweet tweet"/>

        <LinearLayout
            android:id="@+id/btnRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etBody"
            android:orientation="horizontal"
            android:gravity="end">

            <TextView
                android:id="@+id/tvCharCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:textColor="@color/colorTextSecondary"
                android:text="@string/char_max"/>

            <Button
                android:id="@+id/btnTweet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tweet"/>

        </LinearLayout>

    </RelativeLayout>
</layout>
